--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
     <!-- <link rel="" href="./style.css"> -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+<style>
+  html, body {
+    overflow-x: hidden;
+  }
+</style>
+
 </head>
 <body class="">
-    <header class=" max-w[1170px] mx-auto">
-       <nav class=" mb-[59px] ">
-        <div class=" max-w-[1170px] flex justify-between mx-auto items-center mt-[50px] m-auto">
+    <header class="max-w-[1170px] mx-auto">
+       <nav class="mb-[59px] ">
+        <div class="max-w-[1170px] flex justify-between mx-auto items-center mt-[50px] m-auto">
             <h3 class="text-[28px] lg:text-[35px] font-extrabold text-[#414040]"><i class="fa-solid fa-scale-balanced" style="color: #b68c5a;"></i> Justice</h3>
         
-        <ul class=" hidden md:flex gap-[30px]  text-[16px] text-[#707070]">
+        <ul class="hidden md:flex gap-[30px]  text-[16px] text-[#707070]">
             <li class=""><a href="" class="">Home</a></li>
             <li class=""><a href="" class="">Services ></a></li>
             <li class=""><a href="" class="">Cases ></a></li>
@@ -30,7 +36,7 @@
         </div>
        </nav>
       <!-- banner section -->
-       <div class=" max-w-[1170px] h-[550px] mx-auto bg-[url('/images/banner.png')] bg-cover bg-center rounded-lg flex justify-center items-center ">
+       <div class="max-w-[1170px] h-[550px] mx-auto bg-[url('./images/banner.png')] bg-cover bg-center rounded-lg flex justify-center items-center ">
         <div class="mx-auto text-[#FFFFFF] text-center max-w-[692px] ">
 
         <h2 class="text-[40px] md:text-[50px] lg:text-[60px] font-extrabold max-w-[668px] mb-6">We Provide Effective Legal Solutions</h2>
@@ -46,7 +52,7 @@
         <!-- The Legal Practice Area> -->
        
         <section class="mx-auto max-w-[1170px]">
-        <div class=" text-center">
+        <div class=" text-center mb-16 max-w-[714px] mx-auto">
             <h2 class=" pt-[120px] text-[30px] md:text-[40px] font-extrabold text-[#414040] mb-6">The Legal Practice Area</h2>
             <p class=" text-[16px] text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
         </div>
@@ -56,38 +62,38 @@
                 <div class=" w-[401px] flex flex-col justify-center items-center text-center px-[71px] py-16 shadow">
                 <img class=" mb-8 " src="./images/business.png" alt="">
                 <h2 class=" text-[32px] text-[#414040] font-extrabold mb-6">Business Law</h2>
-                <p class=" text-[16px] text-[#707070] leading-[24px] ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
-                <h5 class=" mt-[32px]"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
+                <p class=" text-[16px] text-[#707070] leading-6 ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
+                <h5 class=" mt-8"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
             </div>
                 <div class=" w-[401px] h-[499px] flex flex-col justify-center items-center text-center px-[71px] py-16 shadow">
                 <img class=" mb-8 " src="./images/criminal.png" alt="">
                 <h2 class=" text-[32px] text-[#414040] font-extrabold mb-6">Criminal Law</h2>
-                <p class=" text-[16px] text-[#707070] leading-[24px] ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
-                <h5 class=" mt-[32px]"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
+                <p class=" text-[16px] text-[#707070] leading-6 ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
+                <h5 class=" mt-8"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
             </div>
                 <div class=" w-[401px] h-[499px] flex flex-col justify-center items-center text-center px-[71px] py-16 shadow">
                 <img class=" mb-8 " src="./images/child.png" alt="">
                 <h2 class=" text-[32px] text-[#414040] font-extrabold mb-6">Child Support</h2>
-                <p class=" text-[16px] text-[#707070] leading-[24px] ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
-                <h5 class=" mt-[32px]"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
+                <p class=" text-[16px] text-[#707070] leading-6 ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
+                <h5 class=" mt-8"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
             </div>
                 <div class=" w-[401px] h-[499px] flex flex-col justify-center items-center text-center px-[71px] py-16 shadow">
                 <img class=" mb-8 " src="./images/education.png" alt="">
                 <h2 class=" text-[32px] text-[#414040] font-extrabold mb-6">Education Law</h2>
-                <p class=" text-[16px] text-[#707070] leading-[24px] ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
-                <h5 class=" mt-[32px]"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
+                <p class=" text-[16px] text-[#707070] leading-6 ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
+                <h5 class=" mt-8"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
             </div>
                 <div class=" w-[401px] h-[499px] flex flex-col justify-center items-center text-center px-[71px] py-16 shadow">
                 <img class=" mb-8 " src="./images/divorce.png" alt="">
                 <h2 class=" text-[32px] text-[#414040] font-extrabold mb-6">Divorce Law</h2>
-                <p class=" text-[16px] text-[#707070] leading-[24px] ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
-                <h5 class=" mt-[32px]"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
+                <p class=" text-[16px] text-[#707070] leading-6 ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
+                <h5 class=" mt-8"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
             </div>
                 <div class=" w-[401px] h-[499px] flex flex-col justify-center items-center text-center px-[71px] py-16 shadow">
                 <img class=" mb-8 " src="./images/tax.png" alt="">
                 <h2 class=" text-[32px] text-[#414040] font-extrabold mb-6">Tax Law</h2>
-                <p class=" text-[16px] text-[#707070] leading-[24px] ">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
-                <h5 class=" mt-[32px]"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
+                <p class=" text-[16px] text-[#707070] leading-6">There are many variations of passages of Lorem Ipsum<br> available, but the majority have <br> suffered alteration in some<br> form, by injected humour.</p>
+                <h5 class=" mt-8"><i class="fa-solid fa-arrow-right" style="color: #b68c5a;"></i></h5>
             </div>
 
         </div>
@@ -134,11 +140,11 @@
 
             <div class=" max-w-[714px] text-center m-auto">
                 <h2 class="text-[40px] font-extrabold text-[#414040]">Frequently Asked Any Questions</h2>
-                <p class="text-[1rem] leading-[24px] text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <p class="text-[1rem] leading-6 text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             </div>
 
             <!-- box -->
-            <div class="mt-[64px] grid grid-cols-1 md:grid-cols-2 gap-[30]">
+            <div class="mt-16 grid grid-cols-1 md:grid-cols-2 gap-[30]">
                 <div class="">
                     <div class=" bg-[#F3F3F3] p-8 max-w-[570px] mb-[30px]">
                         <h3 class=" text-[#414040] text-[24px] font-bold mb-4">1. Are application fee waivers available?           <i class="fa-solid fa-minus" style="color: #414040;"></i></h3>
@@ -200,13 +206,16 @@
             </div>
             <!-- form  -->
              <div class="flex justify-center">
-               <form class="w-full max-w-[400px]" action="">
-                <input class="text-[16px] text-[#707070] leading-[26px] w-[400px] md:w-[570px] h-[72px] pl-[23px] bg-[#F3F3F3] rounded-[8px] mb-[30px]" type="text" placeholder="Your Name">
-                <input class="text-[16px] text-[#707070] leading-[26px] w-[400px] md:w-[570px] h-[72px] pl-[23px] bg-[#F3F3F3] rounded-[8px] mb-[30px]" type="text" placeholder="Your Email">
-                <input class="text-[16px] text-[#707070] leading-[26px] w-[400px] md:w-[570px] h-[72px] pl-[23px] bg-[#F3F3F3] rounded-[8px] mb-[30px]" type="text" placeholder="Subject">
-                <textarea class=" resize-none bg-[#F3F3F3] rounded-[8px] w-[400px] md:w-[570px] h-[162px] pl-[23px] text-[16px] text-[#707070] leading-[26px] mb-[30px]" name="" id="" placeholder="Your Message"></textarea>
+               <form class="w-full max-w-[570px] mx-auto" action="">
+                <input class="w-full text-[16px] text-[#707070] leading-[26px] max-w-[570px] md:w-[570px] h-[72px] pl-[23px] bg-[#F3F3F3] rounded-[8px] mb-[30px]" type="text" placeholder="Your Name">
 
-                <button class="w-[400px] md:w-[570px] h-[72px] bg-[#B68C5A] text-[20px] font-semibold rounded-[8px] text-amber-50">Send Message</button>
+                <input class="w-full text-[16px] text-[#707070] leading-[26px] max-w-[570px] md:w-[570px] h-[72px] pl-[23px] bg-[#F3F3F3] rounded-[8px] mb-[30px]" type="text" placeholder="Your Email">
+
+                <input class="w-full text-[16px] text-[#707070] leading-[26px] max-w-[570px] md:w-[570px] h-[72px] pl-[23px] bg-[#F3F3F3] rounded-[8px] mb-[30px]" type="text" placeholder="Subject">
+
+                <textarea class="w-full resize-none bg-[#F3F3F3] rounded-[8px] max-w-[570px] md:w-[570px] h-[162px] pl-[23px] text-[16px] text-[#707070] leading-[26px] mb-[30px]" name="" id="" placeholder="Your Message"></textarea>
+
+                <button class="w-full max-w-[570px] h-[72px] bg-[#B68C5A] text-[20px] font-semibold rounded-[8px] text-amber-50">Send Message</button>
                </form>
              </div>
          </section>
