--- a/index.html
+++ b/index.html
@@ -188,22 +188,22 @@
             <div class="grid md:grid-cols-2 grid-cols-1 justify-items-center">
 
              <div class="border-r border-b border-[#E7E7E7] w-[285px] flex flex-col justify-center items-center text-center px-[61px] py-[65px] bg-[#F3F3F3]">
-                <img class=" mb-4" src="./images/location.png" alt="">
-                <h2 class=" mb-4 text-[24px] text-[#414040] font-extrabold">Address</h2>
-                <p class=" text-[16px] text-[#707070] leading-[26px] ">A108 Adam Street,
-                New York, NY 535022</p>
+                <img class=" mb-4" src="./images/call.png" alt="">
+                <h2 class=" mb-4 text-[24px] text-[#414040] font-extrabold">Call Us</h2>
+                <p class=" text-[16px] text-[#707070] leading-[26px] ">+88 01750 00 00 00
++88 01750 00 00 00</p>
             </div>
              <div class="border-r border-b border-[#E7E7E7] w-[285px] flex flex-col justify-center items-center text-center px-[61px] py-[65px] bg-[#F3F3F3]">
-                <img class=" mb-4" src="./images/location.png" alt="">
-                <h2 class=" mb-4 text-[24px] text-[#414040] font-extrabold">Address</h2>
-                <p class=" text-[16px] text-[#707070] leading-[26px] ">A108 Adam Street,
-                New York, NY 535022</p>
+                <img class=" mb-4" src="./images/email.png" alt="">
+                <h2 class=" mb-4 text-[24px] text-[#414040] font-extrabold">Email Us</h2>
+                <p class=" text-[16px] text-[#707070] leading-[26px] ">info@gmail.com
+info@gmail.com</p>
             </div>
              <div class="border-r border-b border-[#E7E7E7] w-[285px] flex flex-col justify-center items-center text-center px-[61px] py-[65px] bg-[#F3F3F3]">
-                <img class=" mb-4" src="./images/location.png" alt="">
-                <h2 class=" mb-4 text-[24px] text-[#414040] font-extrabold">Address</h2>
-                <p class=" text-[16px] text-[#707070] leading-[26px] ">A108 Adam Street,
-                New York, NY 535022</p>
+                <img class=" mb-4" src="./images/time.png" alt="">
+                <h2 class=" mb-4 text-[24px] text-[#414040] font-extrabold">Working Hours</h2>
+                <p class=" text-[16px] text-[#707070] leading-[26px] ">Mon-Fri: 9AM to 5PM
+Sunday: 9AM to 1 PM</p>
             </div>
              <div class="border-r border-b border-[#E7E7E7] w-[285px] flex flex-col justify-center items-center text-center px-[61px] py-[65px] bg-[#F3F3F3]">
                 <img class=" mb-4" src="./images/location.png" alt="">
